added meta tags for social

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Mohit Dhule" />
     <meta name="description" content="This application is built using React" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <meta property="og:title" content="Wordle Game" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="thumbnail.webp" />
+    <meta property="og:url" content="https://mohit564.github.io/wordle-game" />
     <link rel="stylesheet" href="index.css" />
     <title>Wordle Game - Mohit Dhule</title>
   </head>
